# voicefox

./: Cargo.toml  KEYBINDINGS.md  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/src/: cli.rs  context.rs  cover.rs  main.rs  storage.rs  theme.rs
app/src/config/: loader.rs  mod.rs
app/src/pages/: bili_login.rs  favorites.rs  history.rs  leaderboard.rs  main_page.rs  mod.rs  playlists.rs  search.rs  settings.rs  sidebar.rs
app/src/pages/components/: header.rs  lyric.rs  mod.rs  notification.rs  progress_bar.rs  song_table.rs  status_bar.rs
app/src/playlist/: manager.rs  mod.rs  mode.rs
core/: Cargo.toml
core/src/: events.rs  lib.rs
core/src/model/: config.rs  leaderboard.rs  lyric.rs  mod.rs  playlist.rs  song.rs  source.rs
core/src/traits/: lyric_fetcher.rs  mod.rs  player.rs  source.rs
lyric/: Cargo.toml
lyric/src/: fetcher.rs  lib.rs  service.rs
lyric/src/parser/: krc.rs  lrc.rs  mod.rs  qrc.rs  yrc.rs
player/: Cargo.toml
player/src/: engine.rs  lib.rs  mpv_ipc.rs
source/: Cargo.toml
source/src/: crypto.rs  filter.rs  http.rs  lib.rs  manager.rs
source/src/bili/: auth.rs  leaderboard.rs  mod.rs  playlist.rs  search.rs  url.rs
source/src/js/: engine.rs  js_source.rs  loader.rs  mod.rs  wrapper.js
source/src/kg/: crypto.rs  leaderboard.rs  lyric.rs  mod.rs  playlist.rs  search.rs  url.rs
source/src/kw/: crypto.rs  leaderboard.rs  lyric.rs  mod.rs  playlist.rs  search.rs  url.rs
source/src/local/: metadata.rs  mod.rs  scanner.rs
source/src/mg/: crypto.rs  leaderboard.rs  lyric.rs  mod.rs  playlist.rs  search.rs  song.rs  url.rs
source/src/tx/: crypto.rs  leaderboard.rs  lyric.rs  mod.rs  playlist.rs  search.rs  url.rs
source/src/wy/: crypto.rs  leaderboard.rs  lyric.rs  mod.rs  playlist.rs  search.rs  url.rs
source/tests/: js_user_api.rs
source/tests/fixtures/: user_api_v3.js
test/: Cargo.toml  main.rs
